Day 6: Add production config for Render deployment